# VICE-Team-svn-mirror

./: .gitignore  readme.adoc
.devcontainer/: Dockerfile  devcontainer.json
code-workspaces/: default.code-workspace  vice.code-workspace
vice/: .gitignore  CMakeLists.txt  vcpkg.json
vice/dev/: configure-help.txt
vice/src/: CMakeLists.txt  infocontrib.h
vice/src/arch/: CMakeLists.txt
vice/src/arch/sdl/: CMakeLists.txt
vice/src/arch/shared/: CMakeLists.txt
vice/src/arch/shared/hotkeys/: CMakeLists.txt
vice/src/arch/shared/hwsiddrv/: CMakeLists.txt
vice/src/arch/shared/mididrv/: CMakeLists.txt
vice/src/arch/shared/socketdrv/: CMakeLists.txt
vice/src/arch/shared/sounddrv/: CMakeLists.txt
vice/src/c128/: CMakeLists.txt
vice/src/c128/cart/: CMakeLists.txt
vice/src/c64/: CMakeLists.txt
vice/src/c64/cart/: CMakeLists.txt
vice/src/c64dtv/: CMakeLists.txt
vice/src/cbm2/: CMakeLists.txt
vice/src/cbm2/cart/: CMakeLists.txt
vice/src/core/: CMakeLists.txt
vice/src/core/rtc/: CMakeLists.txt
vice/src/crtc/: CMakeLists.txt
vice/src/datasette/: CMakeLists.txt
vice/src/diag/: CMakeLists.txt
vice/src/diskimage/: CMakeLists.txt
vice/src/drive/: CMakeLists.txt
vice/src/drive/iec/: CMakeLists.txt
vice/src/drive/iec/c64exp/: CMakeLists.txt
vice/src/drive/iec/plus4exp/: CMakeLists.txt
vice/src/drive/iec128dcr/: CMakeLists.txt
vice/src/drive/iecieee/: CMakeLists.txt
vice/src/drive/ieee/: CMakeLists.txt
vice/src/drive/tcbm/: CMakeLists.txt
vice/src/fileio/: CMakeLists.txt
vice/src/fsdevice/: CMakeLists.txt
vice/src/gfxoutputdrv/: CMakeLists.txt
vice/src/hvsc/: CMakeLists.txt
vice/src/iecbus/: CMakeLists.txt
vice/src/imagecontents/: CMakeLists.txt
vice/src/joyport/: CMakeLists.txt
vice/src/lib/: CMakeLists.txt
vice/src/lib/libzmbv/: CMakeLists.txt
vice/src/lib/linenoise-ng/: CMakeLists.txt
vice/src/lib/md5/: CMakeLists.txt
vice/src/lib/p64/: CMakeLists.txt
vice/src/monitor/: CMakeLists.txt  mon_parse.c  mon_parse.h
vice/src/parallel/: CMakeLists.txt
vice/src/pet/: CMakeLists.txt
vice/src/plus4/: CMakeLists.txt
vice/src/plus4/cart/: CMakeLists.txt
vice/src/printerdrv/: CMakeLists.txt
vice/src/raster/: CMakeLists.txt
vice/src/resid/: CMakeLists.txt
vice/src/resid-dtv/: CMakeLists.txt
vice/src/rs232drv/: CMakeLists.txt
vice/src/samplerdrv/: CMakeLists.txt
vice/src/scpu64/: CMakeLists.txt
vice/src/serial/: CMakeLists.txt
vice/src/sid/: CMakeLists.txt
vice/src/tape/: CMakeLists.txt
vice/src/tapeport/: CMakeLists.txt
vice/src/tools/: CMakeLists.txt
vice/src/tools/cartconv/: CMakeLists.txt
vice/src/tools/petcat/: CMakeLists.txt
vice/src/userport/: CMakeLists.txt
vice/src/vdc/: CMakeLists.txt
vice/src/vdrive/: CMakeLists.txt
vice/src/vic20/: CMakeLists.txt
vice/src/vic20/cart/: CMakeLists.txt
vice/src/vicii/: CMakeLists.txt
vice/src/viciisc/: CMakeLists.txt
vice/src/video/: CMakeLists.txt
